--- a/general.scss
+++ b/general.scss
@@ -1,5 +1,17 @@
 html {
   font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
   margin: 0 auto;
-  max-width: 1006px;
+  max-width: 1920px;
+  padding-top: 64px;
+  scroll-behavior: smooth;
+}
+
+main {
+  margin: 0 2%;
+}
+
+button {
+  cursor: pointer;
 }
