--- a/styles.scss
+++ b/styles.scss
@@ -1,9 +1,7 @@
 @import "general";
 @import "mixin";
 @import "header";
-@import "hr";
-@import "links-about";
-@import "pill";
-@import "education-personal-technical";
-@import "work-experience";
+@import "shopping-item-card";
+@import "banner";
+@import "product-information";
 @import "footer";
